--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Transfer</string>
+    <string name="submit">Submit</string>
+    <string name="transfer_amount">Transfer amount</string>
+    <string name="reset_desc">Make another Transfer</string>
 </resources>
