--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="submit">Submit</string>
     <string name="transfer_amount">Transfer amount</string>
     <string name="reset_desc">Make another Transfer</string>
+    <string name="result_fail">Transfer failed</string>
     <string name="result_success">Transfer success</string>
 </resources>
