--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
+    <string name="amount_hint">0</string>
     <string name="app_name">Transfer</string>
-    <string name="submit">Submit</string>
-    <string name="transfer_amount">Transfer amount</string>
+    <string name="dollar_sign">$</string>
     <string name="reset_desc">Make another Transfer</string>
     <string name="result_fail">Transfer failed</string>
     <string name="result_success">Transfer success</string>
+    <string name="submit">Submit</string>
+    <string name="transfer_amount">Transfer amount</string>
 </resources>
